--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
         
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #ffffff;
+            background-color: #000000;
             color: #111827;
             transition: background-color 0.3s, color 0.3s;
             min-height: 200vh; 
