--- a/index.html
+++ b/index.html
@@ -2170,6 +2170,491 @@
 /*FAQ Section End*/   
 
 
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #fff;
+      color: #111;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    /* ===== DARK MODE ===== */
+    body.dark {
+      background: #111;
+      color: #f1f1f1;
+    }
+    body.dark .top-navbar { background: #1a1a1a; border-bottom: 1px solid #333; }
+    body.dark .nav-links a { color: #f1f1f1; }
+    body.dark .nav-links a:hover { color: #f98842; }
+    body.dark .icon-btn { color: #ccc; }
+    body.dark .mobile-menu { background: #1a1a1a; color: #f1f1f1; }
+    body.dark .mobile-menu a { color: #f1f1f1; border-bottom: 1px solid #333; }
+    body.dark .category-bar { background: #000; }
+    body.dark .sub-menu-cat { background: #222; }
+
+    /* ===== HEADER ===== */
+    .top-navbar {
+      background: #fff;
+      border-bottom: 1px solid #eee;
+      position: relative;
+      top: 0;
+      z-index: 1000;
+      transition: background 0.3s;
+    }
+    .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+      position: relative;
+    }
+    .nav-logo { height: 50px; }
+
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+      list-style: none;
+      z-index: 999;
+    }
+    .nav-links li { position: relative; }
+    .nav-links a {
+      text-decoration: none;
+      color: #111;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    .nav-links a:hover { color: #f98842; }
+
+    /* Submenu */
+    .sub-menu {
+      position: absolute;
+      top: 40px;
+      left: 0;
+      background: #111;
+      color: #fff;
+      display: none;
+      flex-direction: column;
+      min-width: 180px;
+      border-radius: 6px;
+      padding: 10px;
+      z-index: 2000;
+    }
+    .sub-menu a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 0.9rem;
+      padding: 6px 0;
+    }
+    .sub-menu a:hover { color: #f98842; }
+    .nav-links li:hover .sub-menu { display: flex; }
+
+    /* Controls */
+    .nav-controls {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      position: relative;
+    }
+
+    .icon-btn {
+      background: none;
+      border: none;
+      font-size: 20px;
+      cursor: pointer;
+      color: #888;
+      transition: color 0.3s ease;
+    }
+    .icon-btn:hover { color: #f98842; }
+
+    /* Search bar animation */
+    .search-container {
+      position: absolute;
+      right: 60px;
+      top: 50%;
+      transform: translateY(-50%);
+      display: flex;
+      align-items: center;
+      transition: width 0.3s ease;
+      overflow: hidden;
+      width: 0;
+    }
+    .search-container input {
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      padding: 8px 15px; /* Increased padding for more space */
+      outline: none;
+      width: 180px;
+    }
+    .search-container.show {
+      width: 220px; /* Slightly increased width */
+    }
+
+    /* Burger Menu */
+    #mobile-menu-toggle { display: none; }
+    .burger-icon {
+      display: none;
+      flex-direction: column;
+      gap: 4px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    .burger-icon span {
+      width: 25px;
+      height: 3px;
+      background: #f98842;
+      border-radius: 2px;
+      transition: 0.3s;
+    }
+    #mobile-menu-toggle:checked + label.burger-icon span:nth-child(1) {
+      transform: rotate(45deg) translateY(8px);
+    }
+    #mobile-menu-toggle:checked + label.burger-icon span:nth-child(2) {
+      opacity: 0;
+    }
+    #mobile-menu-toggle:checked + label.burger-icon span:nth-child(3) {
+      transform: rotate(-45deg) translateY(-8px);
+    }
+
+    /* Mobile Menu */
+    .mobile-menu {
+      display: none;
+      position: fixed;
+      top: 0; left: -100%;
+      width: 280px;
+      height: 100vh;
+      background: #fff;
+      box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+      flex-direction: column;
+      padding: 4rem 2rem;
+      transition: left 0.3s ease;
+      overflow-y: auto;
+      z-index: 999;
+    }
+    #mobile-menu-toggle:checked ~ .mobile-menu { display: flex; left: 0; }
+
+    .mobile-menu a {
+      text-decoration: none;
+      color: #111;
+      padding: 0.8rem 0;
+      border-bottom: 1px solid #eee;
+    }
+    .mobile-menu strong {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+    }
+    .mobile-category {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.8rem 0;
+      cursor: pointer;
+      border-bottom: 1px solid #f1f1f1;
+    }
+    .mobile-category i { color: #f98842; }
+    .mobile-submenu {
+      display: none;
+      flex-direction: column;
+      margin-left: 15px;
+      border-left: 2px solid #f1f1f1;
+    }
+    .mobile-category.active + .mobile-submenu { display: flex; }
+    .mobile-submenu a::after {
+      content: "›";
+      color: #f98842;
+      margin-left: 8px;
+    }
+    .mobile-menu-overlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.4);
+      z-index: 998;
+    }
+    #mobile-menu-toggle:checked ~ .mobile-menu-overlay { display: block; }
+
+    @media (max-width: 768px) {
+      .nav-links { display: none; }
+      .burger-icon { display: flex; }
+    }
+
+    /* ===== CATEGORY SLIDER ===== */
+    .category-bar {
+      position: relative;
+      width: 100%;
+      background: #f98842;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 0;
+      z-index: 1001;
+    }
+
+    .cat-slider-wrapper {
+      width: 85%;
+      overflow: visible;
+      position: relative;
+    }
+    .cat-slider {
+      display: flex;
+      gap: 30px;
+      transition: transform 0.5s ease;
+    }
+    .cat-item {
+      position: relative;
+      flex: 0 0 calc(20% - 24px);
+      text-align: center;
+    }
+    .cat-item > a {
+      color: #f1f1f1;
+      font-weight: 600;
+      text-decoration: none;
+      transition: color 0.3s ease;
+      letter-spacing: 0.5px;
+      font-size: 0.95rem;
+      display: inline-block;
+      padding: 5px 0;
+    }
+
+
+    .cat-item > a::after {
+      content: "›";
+      color: #fff;
+      font-size: 15px;
+    }
+
+    .cat-item > a:hover { color: #000; }
+
+   
+
+    /* Down arrow indicator */
+    .cat-item > a i {
+      margin-left: 5px;
+      font-size: 0.7rem;
+    }
+
+    .sub-menu-cat {
+      position: absolute;
+      top: 35px;
+      left: 50%;
+      transform: translateX(-50%) translateY(10px);
+      background: #f98842;
+      border-radius: 6px;
+      padding: 10px 15px;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+      min-width: 180px;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+      z-index: 2000;
+    }
+    .cat-item:hover .sub-menu-cat {
+      opacity: 1;
+      visibility: visible;
+      transform: translateX(-50%) translateY(0);
+    }
+    .sub-menu-cat a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 0.9rem;
+      padding: 5px 0;
+      transition: color 0.3s;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .sub-menu-cat a::after {
+      content: "›";
+      color: #000;
+      font-size: 0.8rem;
+    }
+    .sub-menu-cat a:hover { color: #000; }
+
+    .cat-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: #fff;
+      color: #f98842;
+      border: none;
+      font-size: 20px;
+      cursor: pointer;
+      padding: 8px 12px;
+      border-radius: 50%;
+      z-index: 10;
+      transition: background 0.3s ease;
+    }
+    .cat-btn:hover { background: #000; }
+    .cat-btn.prev { left: 50px; }
+    .cat-btn.next { right: 50px; }
+    @media (max-width: 768px) {
+      .category-bar { display: none; }
+    }
+
+
+    
+.footer {
+  background: #111;
+  color: #ccc;
+  font-family: 'Poppins', sans-serif;
+  padding-top: 50px;
+}
+
+/* Newsletter */
+.newsletter {
+  text-align: center;
+  margin-bottom: 40px;
+  padding: 0 20px;
+}
+
+.newsletter h2 {
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
+
+.newsletter p {
+  color: #aaa;
+  font-size: 0.95rem;
+  margin-bottom: 20px;
+}
+
+.newsletter-form {
+  display: flex;
+  justify-content: center;
+  max-width: 400px;
+  margin: auto;
+  border: 1px solid #333;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.newsletter-form input {
+  flex: 1;
+  border: none;
+  padding: 10px;
+  background: #1b1b1b;
+  color: #fff;
+  outline: none;
+}
+
+.newsletter-form button {
+  background: #f98842;
+  border: none;
+  color: #fff;
+  padding: 0 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.newsletter-form button:hover {
+  background: #ff9b5f;
+}
+
+/* Footer main */
+.footer-main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 50px auto 0;
+  padding: 0 20px;
+  gap: 2rem;
+}
+
+.footer-col {
+  flex: 1 1 220px;
+  min-width: 200px;
+}
+
+.footer-col h4 {
+  color: #fff;
+  font-size: 1rem;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-col ul li {
+  margin-bottom: 8px;
+}
+
+.footer-col ul li a {
+  text-decoration: none;
+  color: #bbb;
+  transition: color 0.3s;
+  font-size: 0.95rem;
+}
+
+.footer-col ul li a:hover {
+  color: #f98842;
+}
+
+/* Logo section at start */
+.footer-brand img {
+  height: 70px;
+  margin-bottom: 15px;
+}
+
+.footer-brand p {
+  color: #aaa;
+  font-size: 0.9rem;
+  margin: 4px 0;
+}
+
+.footer-brand a {
+  color: #f98842;
+  text-decoration: none;
+}
+.footer-brand a:hover {
+  color: #fff;
+}
+
+/* Social links */
+.social li {
+  margin-bottom: 8px;
+}
+.social a i {
+  margin-right: 8px;
+  color: #f98842;
+}
+
+/* Bottom */
+.footer-bottom {
+  text-align: center;
+  border-top: 1px solid #222;
+  margin-top: 40px;
+  padding: 15px 10px;
+  font-size: 0.9rem;
+  color: #999;
+}
+.footer-bottom span {
+  color: #f98842;
+  font-weight: 500;
+}
+
+/* Responsive */
+@media (max-width: 992px) {
+  .footer-main {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+  .footer-brand img {
+    margin-bottom: 10px;
+  }
+}
+
 
 
     </style>
